# mania

./: .gitignore  .justfile  Cargo.toml  README.MD  default.nix  flake.nix  shell.nix  typos.toml
examples/: Cargo.toml  multi-login.rs  multi_login.rs
examples/multi-login/: Cargo.toml
examples/multi-login/src/: main.rs
mania/: Cargo.toml  build.rs
mania-codec/: Cargo.toml
mania-codec/src/: audio.rs
mania-codec/src/audio/: decoder.rs  encoder.rs  resampler.rs
mania-codec/src/audio/decoder/: symphonia_decoder.rs
mania-codec/src/audio/encoder/: silk_encoder.rs
mania-codec/src/audio/resampler/: rubato_resampler.rs
mania/src/: business.rs  connect.rs  context.rs  crypto.rs  error.rs  event.rs  http.rs  key_store.rs  lib.rs  main.rs  packet.rs  ping.rs  session.rs  sign.rs  socket.rs  tlv.rs
mania/src/core/: business.rs  cache.rs  connect.rs  context.rs  crypto.rs  entity.rs  error.rs  event.rs  highway.rs  http.rs  key_store.rs  mod.rs  packet.rs  ping.rs  session.rs  sign.rs  socket.rs  tlv.rs
mania/src/core/business/: caching_logic.rs  messaging_logic.rs  wt_logic.rs
mania/src/core/crypto/: ecdh.rs  stream_sha1.rs  tea.rs
mania/src/core/entity/: fetch_group_requests.rs  group_sys_enum.rs
mania/src/core/event/login/: mod.rs  trans_emp.rs  wtlogin.rs
mania/src/core/event/message/: file_c2c_download.rs  file_group_download.rs  image_c2c_download.rs  image_c2c_upload.rs  image_group_download.rs  image_group_upload.rs  mod.rs  multi_msg_download.rs  push_msg.rs  record_c2c_download.rs  record_c2c_upload.rs  record_group_download.rs  record_group_upload.rs  send_message.rs  video_c2c_download.rs  video_c2c_upload.rs  video_group_download.rs  video_group_upload.rs
mania/src/core/highway/: hw_client.rs  hw_frame_codec.rs
mania/src/core/operation/: cache_op.rs  common_op.rs  highway_op.rs  login.rs  mod.rs  system.rs  wt_op.rs
mania/src/core/protos/: README.MD
mania/src/core/sign/: linux.rs
mania/src/core/tlv/: t011q.rs  t016a.rs  t016e.rs  t016q.rs  t017q.rs  t018.rs  t018q.rs  t019q.rs  t01bq.rs  t01cq.rs  t01dq.rs  t01eq.rs  t033q.rs  t035q.rs  t066q.rs  t0d1q.rs  t100.rs  t106.rs  t107.rs  t10a.rs  t116.rs  t119.rs  t11a.rs  t124.rs  t128.rs  t141.rs  t142.rs  t143.rs  t144.rs  t145.rs  t146.rs  t147.rs  t166.rs  t177.rs  t191.rs  t305.rs  t318.rs  t521.rs  t543.rs
mania/src/crypto/: consts.rs  tea.rs
mania/src/entity/: bot_friend.rs  bot_group_member.rs  bot_group_request.rs  bot_user_info.rs  mod.rs  sys_face.rs
mania/src/event/: alive.rs  bot.rs  friend.rs  group.rs  info_sync.rs  mod.rs  system.rs  trans_emp.rs  wtlogin.rs
mania/src/event/bot/: bot_online.rs
mania/src/event/friend/: friend_message.rs  friend_new.rs  friend_poke.rs  friend_recall.rs  friend_rename.rs  friend_request.rs
mania/src/event/group/: group_admin_changed.rs  group_essence.rs  group_invitation.rs  group_invitation_request.rs  group_join_request.rs  group_member_decrease.rs  group_member_enter.rs  group_member_increase.rs  group_member_mute.rs  group_message.rs  group_mute.rs  group_name_change.rs  group_pin_changed.rs  group_poke.rs  group_reaction.rs  group_recall.rs  group_special_title.rs  group_todo.rs
mania/src/event/login/: wtlogin.rs
mania/src/event/system/: alive.rs  bot_offline.rs  bot_online.rs  bot_rename.rs  info_sync.rs  nt_sso_alive.rs  temp_message.rs
mania/src/message/: builder.rs  chain.rs  entity.rs  mod.rs  packer.rs
mania/src/message/entity/: extra_general_flags.rs  extra_info.rs  face.rs  file.rs  forward.rs  image.rs  json.rs  light_app.rs  long_msg.rs  market_face.rs  mention.rs  multi_msg.rs  record.rs  text.rs  video.rs  xml.rs
mania/src/protos/: nt_device_sign.proto  nt_packet_uid.proto  sso_info_sync.proto  tlv.proto
mania/src/protos/system/: nt_packet_uid.proto
mania/src/protos/tlv/: tlv.proto
mania/src/sign/: linux.rs
mania/src/tlv/: t011.rs  t011q.rs  t016.rs  t016a.rs  t016e.rs  t016q.rs  t017.rs  t017q.rs  t018.rs  t018q.rs  t019.rs  t019q.rs  t01b.rs  t01bq.rs  t01c.rs  t01cq.rs  t01d.rs  t01dq.rs  t01e.rs  t01eq.rs  t033.rs  t033q.rs  t035.rs  t035q.rs  t066.rs  t066q.rs  t0d1.rs  t0d1q.rs  t100.rs  t106.rs  t107.rs  t10a.rs  t116.rs  t119.rs  t11a.rs  t124.rs  t128.rs  t141.rs  t142.rs  t143.rs  (+11 more)
mania/src/utility/: compress.rs  def_default.rs  image_resolver.rs  mod.rs  random_gen.rs  stream_helper.rs
(+103 files in other folders)
