[workspace]
resolver = "2"
members = ["mania", "mania-macros", "examples"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license-file = "LICENCE"

[workspace.dependencies]
md-5 = "0.10.6"
hex = "0.4.3"

[profile.release]
opt-level = 2
debug = false
lto = true
incremental = false
codegen-units = 1
strip = true
