[package]
name = "mania-examples"
description = "examples for mania"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
mania = { path = "../mania" }
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
console-subscriber = { version = "0.4.1", optional = true }
tokio.workspace = true
uuid.workspace = true
cfg-if = "1.0.0"
tracing-appender = "0.2.3"

[features]
default = []
tokio-tracing = ["console-subscriber"]

[[example]]
name = "mania_multi_login"
path = "multi_login.rs"
