[package]
name = "mania-codec"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
num-traits = "0.2.19"
rubato = "0.16.1"
silk-sys = "0.1.0"
symphonia = { version = "0.5.4", features = ["all"] }
thiserror.workspace = true
num_enum.workspace = true
bytes.workspace = true
