[package]
name = "mania-multi-login"
version = "0.0.1"
edition = "2021"

[dependencies]
mania = { path = "../../mania" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
console-subscriber = { version = "0.4.1", optional = true }
tokio = { version = "1.43.0", features = ["full"] }

[features]
default = []
tokio-tracing = ["console-subscriber"]
